--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import 'base.css';
 
+@import 'modules/musik.css';
 @import 'modules/timer.css';
